VAN-10286 fix img too big in DPI :200%

--- a/vtr-ui/src/app/components/widgets/widget-security/widget-security.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-security/widget-security.component.scss
@@ -16,58 +16,8 @@
 			padding-top: 5rem;
 
 			img {
-				width: 80%
-			}
-
-			.circle {
 				width: 16rem;
 				height: 16rem;
-				border-radius: 50%;
-				font-size: 5rem;
-				color: $light;
-				line-height: 16rem;
-				text-align: center;
-				font-weight: $weight_bold;
-				background: $main_darker;
-
-				span.percent {
-					font-size: 2.5rem;
-				}
-			}
-			.circle{
-				&.percent-0{
-					background: linear-gradient(90deg, $percent_0_dark, $percent_0_light);
-				}
-				&.percent-20{
-					background: linear-gradient(90deg, $percent_20_dark, $percent_20_light);
-				}
-				&.percent-25{
-					background: linear-gradient(90deg, $percent_25_dark, $percent_25_light);
-				}
-				&.percent-33{
-					background: linear-gradient(90deg, $percent_33_dark, $percent_33_light);
-				}
-				&.percent-40{
-					background: linear-gradient(90deg, $percent_40_dark, $percent_40_light);
-				}
-				&.percent-50{
-					background: linear-gradient(90deg, $percent_50_dark, $percent_50_light);
-				}
-				&.percent-60{
-					background: linear-gradient(90deg, $percent_60_dark, $percent_60_light);
-				}
-				&.percent-66{
-					background: linear-gradient(90deg, $percent_66_dark, $percent_66_light);
-				}
-				&.percent-75{
-					background: linear-gradient(90deg, $percent_75_dark, $percent_75_light);
-				}
-				&.percent-80{
-					background: linear-gradient(90deg, $percent_80_dark, $percent_80_light);
-				}
-				&.percent-100{
-					background: linear-gradient(90deg, $percent_100_dark, $percent_100_light);
-				}
 			}
 		}
 		.title {
